# src/models/Transaction.ts
@@ -1,23 +1,23 @@
 import { Entity, Column, PrimaryGeneratedColumn, ManyToOne } from 'typeorm';
 import User from './User'
 
-@Entity('chat')
-export default class Chat {
+@Entity('transactions')
+export default class Transactions {
   @PrimaryGeneratedColumn('increment')
   id: number;
 
   @Column({ type: 'varchar' })
-  message: string;
+  title: string;
+  
+  @Column({ type: 'varchar' })
+  category: string;
+ 
+  @Column({ type: 'varchar' })
+  amount: number;
 
   @ManyToOne(() => User, user => user.messages, { onDelete: 'SET NULL', onUpdate: 'CASCADE', eager: true })
-  author: User;
+  user: User;
 
   @Column({ type: 'date' })
   createdAt: Date;
-
-  @Column({ nullable: true, type: 'date' })
-  updatedAt: Date;
-
-  @Column({ nullable: true, type: 'date' })
-  deletedAt: Date;
 }
