# src/models/User.ts
@@ -1,6 +1,7 @@
 
 import { Entity, Column, PrimaryGeneratedColumn, OneToMany } from 'typeorm';
 import Chat from './Chat'
+import Transaction from './Transaction';
 
 @Entity('users')
 export default class User {
@@ -21,6 +22,9 @@ export default class User {
 
   @OneToMany(() => Chat, chat => chat.author, { onDelete: 'SET NULL', onUpdate: 'CASCADE' })
   messages: Chat[];
+
+  @OneToMany(() => Transaction, transaction => transaction.user, { onDelete: 'SET NULL', onUpdate: 'CASCADE' })
+  transactions: Transaction[];
 
   @Column({ type: 'date' })
   createdAt: Date;
