# src/routes.ts
@@ -7,6 +7,7 @@ const upload = multer(uploadConfig);
 import UserController from './controllers/UserController';
 import SessionController from './controllers/SessionController';
 import ChatController from './controllers/ChatController';
+import TransactionController from './controllers/TransactionController';
 import UploadController from './controllers/UploadController';
 
 export const routes = express.Router();
@@ -21,5 +22,8 @@ routes.delete('/users/delete/:id', UserController.delete); // Deletar usuários
 
 routes.post('/chat/send', ChatController.create); // Enviar mensagem
 routes.get('/chat/list', ChatController.list); // Listar mensagens
+
+routes.post('/transactions/create', TransactionController.create); // Criar transação
+routes.get('/transactions/list', TransactionController.list); // Listar transações
 
 routes.post('/upload', upload.single('image'), UploadController.upload)
