# src/views/user_view.ts
@@ -1,5 +1,6 @@
 import User from '../models/User';
 import { chatRenderMany } from './chat_view';
+import { transactionRenderMany } from './transactions_view';
 
 export function userRender(user: User) {
   return {
@@ -8,6 +9,7 @@ export function userRender(user: User) {
     email: user.email,
     image: user.image,
     messages: chatRenderMany(user.messages),
+    transactions: user.transactions,
     createdAt: user.createdAt,
     updatedAt: user.updatedAt,
     deletedAt: user.deletedAt,
@@ -21,6 +23,7 @@ export function userRenderMany(users: User[]) {
     email: user.email,
     image: user.image,
     messages: chatRenderMany(user.messages),
+    transactions: transactionRenderMany(user.transactions),
     createdAt: user.createdAt,
     updatedAt: user.updatedAt,
     deletedAt: user.deletedAt,
